Refreshed site from script.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 title: Home
 ---
 
-<h2>Welcome</h2>
+<h2>Welcome to the 30 Minutes project!</h2>
 
-<p>Foobar! Testing...</p>
+<p>This is my attempt to bootstrap a real blog (not just a journal).
+    My inspiration is the early xkcd <a href="https://xkcd.com/1/">cartoons</a>
+    , where it's clear Randall Munroe is just having fun, 
+    making doodles and occasionally putting them up online, without worrying too much about the thematic consistency
+    evident in his mature posts. In fact, it seems like he is <i>discovering</i> his themes and style as the cartoons progress.
+    This is what I want to do--write little pieces of shortform for fun and hopefully discover a theme and style--
+    and I'm setting aside 30 minutes a day to do it. Enjoy :) </p>
 
-<p>Check out my latest exploits:</p>
-
-<h2>Posts</h2>
+<h2>The Latest</h2>
 $partial("templates/post-list.html")$
 
 <p>…or you can find more in the <a href="archive.html">archives</a>.</p>
