Refreshed site from script.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@ title: Home
 <h2>Welcome to the 30 Minutes project!</h2>
 
 <p>This is my attempt to bootstrap a real blog (not just a journal).
-    My inspiration is the early xkcd <a href="https://xkcd.com/1/">cartoons</a>
-    , where it's clear Randall Munroe is just having fun, 
-    making doodles and occasionally putting them up online, without worrying too much about the thematic consistency
-    evident in his mature posts. In fact, it seems like he is <i>discovering</i> his themes and style as the cartoons progress.
+    My inspiration is the early xkcd <a href="https://xkcd.com/1/">cartoons</a>, where it's clear Randall Munroe is just having fun. 
+    He draws doodles and occasionally puts them up online, without worrying too much about the thematic consistency
+    evident in his mature posts. In fact, it seems like he is <i>discovering</i> his themes and distinctive style as the cartoons progress.
     This is what I want to do--write little pieces of shortform for fun and hopefully discover a theme and style--
     and I'm setting aside 30 minutes a day to do it. Enjoy :) </p>
 
